[package]
name = "vault"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
rusqlite = "0.29.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = 3
panic = "abort"

[profile.dev.package."*"]
opt-level = 2

[profile.release.package."*"]
opt-level = 3
